--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ python = ">=3.11, <4.0"
 rich = "^13.3.1"
 textual = "^0.13.0"
 typer = "^0.9.0"
+pyment = "^0.3.3"
+sphinx = "^7.0.1"
+polars = "^0.18.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
